[Added] Wheel UI

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,4 @@ InitTestScene*.unity*
 /[Aa]ssets/Unity.VisualScripting.Generated/VisualScripting.Core/Property Providers.meta
 
 # Auto-generated scenes by play mode tests
+/.idea
